# ngrokmonitor

./: Cargo.toml  Cross.toml  README.md  ngrokmonitor.deb
ngrokmonitor/DEBIAN/: control
ngrokmonitor/etc/ngrokmonitor/: ngrokmonitor.cfg
ngrokmonitor/lib/systemd/system/: ngrokmonitor.service
src/: main.rs
